fix(uikit): fix z-index for modal

--- a/packages/uikit/src/modal/index.module.scss
+++ b/packages/uikit/src/modal/index.module.scss
@@ -1,5 +1,6 @@
 .backdrop {
   position: fixed;
+  z-index: 99999;
   top: 0;
   left: 0;
 
